[gd_scene load_steps=4 format=3 uid="uid://bkww0j75sc5qc"]

[ext_resource type="Script" path="res://src/main/scene/ui/Scripts/title_screen.gd" id="1_0ch6y"]
[ext_resource type="Theme" uid="uid://dum4ct87pjet4" path="res://src/main/assets/theme/default_theme.tres" id="1_acq8e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmys2"]
bg_color = Color(0.773996, 0.533723, 0.447249, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_acq8e")
script = ExtResource("1_0ch6y")

[node name="MainTitleControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TitleVbox" type="VBoxContainer" parent="MainTitleControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -41.5
offset_right = 35.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="StartGame" type="Button" parent="MainTitleControl/TitleVbox"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 2
text = "StartGame"

[node name="Settings" type="Button" parent="MainTitleControl/TitleVbox"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MainTitleControl/TitleVbox"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 2
text = "Quit"

[node name="ModesControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ModeSelection" type="HBoxContainer" parent="ModesControl"]
custom_minimum_size = Vector2(480, 240)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(240, 120)
theme_override_constants/separation = 100

[node name="SinglePlayer" type="Button" parent="ModesControl/ModeSelection"]
layout_mode = 2
size_flags_horizontal = 3
text = "SinglePlayer"

[node name="OnlineMultiplayer" type="Button" parent="ModesControl/ModeSelection"]
layout_mode = 2
size_flags_horizontal = 3
text = "OnlineMultiplayer"

[node name="ExitModeSelection" type="Button" parent="ModesControl"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -45.0
offset_right = 40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Exit"

[node name="HostOrJoinVbox" type="VBoxContainer" parent="ModesControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -60.0
offset_right = 40.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 60)
theme_override_constants/separation = 20

[node name="HostGame" type="Button" parent="ModesControl/HostOrJoinVbox"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 2
text = "HostGame"

[node name="JoinGame" type="Button" parent="ModesControl/HostOrJoinVbox"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 2
text = "JoinGame"

[node name="BackToModeSelection" type="Button" parent="ModesControl/HostOrJoinVbox"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 2
text = "Back
"

[node name="HostSettings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HostSettings"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HostNameHbox" type="HBoxContainer" parent="HostSettings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="HostSettings/VBoxContainer/HostNameHbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Host Name"

[node name="TextEdit" type="TextEdit" parent="HostSettings/VBoxContainer/HostNameHbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MaxPlayersHbox" type="HBoxContainer" parent="HostSettings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="HostSettings/VBoxContainer/MaxPlayersHbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Max Players"

[node name="TabBar" type="TabBar" parent="HostSettings/VBoxContainer/MaxPlayersHbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CheckPassWordHbox" type="HBoxContainer" parent="HostSettings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="HostSettings/VBoxContainer/CheckPassWordHbox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Use Password"

[node name="CheckButton" type="CheckButton" parent="HostSettings/VBoxContainer/CheckPassWordHbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PassWordHbox" type="HBoxContainer" parent="HostSettings/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="HostSettings/VBoxContainer/PassWordHbox"]
layout_mode = 2
size_flags_horizontal = 3
text = "PassWord"

[node name="TextEdit" type="TextEdit" parent="HostSettings/VBoxContainer/PassWordHbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartAsHost" type="Button" parent="HostSettings"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -80.0
offset_right = 30.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 0
text = "Start"

[node name="BackToHostOrJoin" type="Button" parent="HostSettings"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -45.0
offset_right = 30.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Lobbies" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Lobbies"]
custom_minimum_size = Vector2(300, 240)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -140.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xmys2")

[node name="Label" type="Label" parent="Lobbies/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Not Found"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Lobbies"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.5
offset_top = -60.0
offset_right = 47.5
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30

[node name="Refresh" type="Button" parent="Lobbies/HBoxContainer"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 2
text = "Refresh"

[node name="Join" type="Button" parent="Lobbies/HBoxContainer"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 2
text = "Join"

[node name="BackToHostOrJoinFromJoin" type="Button" parent="Lobbies/HBoxContainer"]
custom_minimum_size = Vector2(60, 24)
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MainTitleControl/TitleVbox/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MainTitleControl/TitleVbox/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainTitleControl/TitleVbox/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="ModesControl/ModeSelection/SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="ModesControl/ModeSelection/OnlineMultiplayer" to="." method="_on_online_multiplayer_pressed"]
[connection signal="pressed" from="ModesControl/ExitModeSelection" to="." method="_on_exit_mode_selection_pressed"]
[connection signal="pressed" from="ModesControl/HostOrJoinVbox/HostGame" to="." method="_on_host_game_pressed"]
[connection signal="pressed" from="ModesControl/HostOrJoinVbox/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="ModesControl/HostOrJoinVbox/BackToModeSelection" to="." method="_on_back_to_mode_selection_pressed"]
[connection signal="toggled" from="HostSettings/VBoxContainer/CheckPassWordHbox/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="HostSettings/StartAsHost" to="." method="_on_start_as_host_pressed"]
[connection signal="pressed" from="HostSettings/BackToHostOrJoin" to="." method="_on_back_to_host_or_join_pressed"]
[connection signal="pressed" from="Lobbies/HBoxContainer/BackToHostOrJoinFromJoin" to="." method="_on_back_to_host_or_join_from_join_pressed"]
